--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -271,7 +271,8 @@
    "source": [
     "#  Step 4. Check the student data for NaN's. \n",
     "\n",
-    "student_data_df.isnull().values.any()"
+    "student_data_df.isnull().values.any()\n",
+    "#student_data_df.loc[student_data_df['school_name'] == 'Thomas High School'].head()"
    ]
   },
   {
